--- a/src/pages/User/User.css
+++ b/src/pages/User/User.css
@@ -152,3 +152,17 @@
     color: white;
     font-weight: 600;
 }
+
+.input-error {
+  border-color: #e63946;
+}
+
+.error {
+  color: #e63946;
+  font-size: 1rem;
+  margin-top: 0.3rem;
+}
+
+.disabled-btn {
+  cursor: not-allowed;
+}
